<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/old_copper_blue1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/customer_name"
        android:layout_width="202dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="Farfetch"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="131dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="Representant:"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_name" />

    <TextView
        android:id="@+id/representative_name"
        android:layout_width="155dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:text="@string/view_customer_representative"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="85dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="Address:"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="65dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="E-mail:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="70dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="Phone:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="72dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:text="Tax No:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/custumer_email"
        android:layout_width="213dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:singleLine="false"
        android:text="@string/view_customer_email"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/customer_address"
        android:layout_width="209dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:text="@string/view_customer_address"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/customer_phone"
        android:layout_width="131dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:text="@string/view_customer_phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/customer_tax_no"
        android:layout_width="89dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:text="@string/view_customer_taxno"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <Button
        android:id="@+id/meetings_button"
        android:layout_width="337dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corner_blue"
        android:onClick="goto_edit_customer"
        android:text="Meetings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sales_hist_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sales_hist_button"
        android:layout_width="337dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corner_blue"
        android:text="Sales History"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/orders_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/orders_button"
        android:layout_width="337dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/rounded_corner_blue"
        android:text="Orders"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>